--- a/phonepe project.ipynb
+++ b/phonepe project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6FYwMpa3eYgrg+a8bHJ+A",
+      "authorship_tag": "ABX9TyN5r6FVu92/nwIVKXLL/+Fi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,8 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "import os"
+        "import os\n",
+        "import streamlit as st\n"
       ],
       "metadata": {
         "id": "SLiRKZAgVSl3"
@@ -79,24 +80,57 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 200
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8iSIEzOLVwIE",
-        "outputId": "29a086fd-13e6-466a-d86a-7da49f8d2e1a"
+        "outputId": "ba3c97a1-c0ce-453f-beef-425bd5cc310a"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-8e00f461d9e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"/content/pulse/data/aggregated/top/transaction/country/india/state/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstate_list\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mstate_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/pulse/data/aggregated/top/transaction/country/india/state/'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['mizoram',\n",
+              " 'lakshadweep',\n",
+              " 'meghalaya',\n",
+              " 'chhattisgarh',\n",
+              " 'karnataka',\n",
+              " 'odisha',\n",
+              " 'kerala',\n",
+              " 'goa',\n",
+              " 'uttarakhand',\n",
+              " 'punjab',\n",
+              " 'andhra-pradesh',\n",
+              " 'tamil-nadu',\n",
+              " 'arunachal-pradesh',\n",
+              " 'chandigarh',\n",
+              " 'madhya-pradesh',\n",
+              " 'west-bengal',\n",
+              " 'assam',\n",
+              " 'uttar-pradesh',\n",
+              " 'gujarat',\n",
+              " 'manipur',\n",
+              " 'tripura',\n",
+              " 'puducherry',\n",
+              " 'bihar',\n",
+              " 'jammu-&-kashmir',\n",
+              " 'nagaland',\n",
+              " 'rajasthan',\n",
+              " 'delhi',\n",
+              " 'maharashtra',\n",
+              " 'telangana',\n",
+              " 'andaman-&-nicobar-islands',\n",
+              " 'himachal-pradesh',\n",
+              " 'jharkhand',\n",
+              " 'haryana',\n",
+              " 'ladakh',\n",
+              " 'sikkim',\n",
+              " 'dadra-&-nagar-haveli-&-daman-&-diu']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     },
@@ -187,7 +221,8 @@
         "              phonepe['district'].append(j)\n",
         "              phonepe['pincode'].append(k)\n",
         "              phonepe['year'].append(l)\n",
-        "              phonepe['quater'].append(int(m.strip('.json')))\n"
+        "              phonepe['quater'].append(int(m.strip('.json')))\n",
+        "pd.DataFrame(phonepe)\n"
       ],
       "metadata": {
         "colab": {
@@ -195,19 +230,19 @@
           "height": 235
         },
         "id": "CiJlFZCEcIf3",
-        "outputId": "076a328d-5e4b-4f88-9982-5fa36ecf348f"
+        "outputId": "e23062db-17f0-4968-e691-940ce5796e36"
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "FileNotFoundError",
+          "ename": "NotADirectoryError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-0f51b3bb0157>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstate_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mp_i\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mAgg_dist\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp_i\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mAgg_dist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mp_j\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_i\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/pulse/data/top/transaction/country/india/mizoram/'"
+            "\u001b[0;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-0f51b3bb0157>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mAgg_pin\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m       \u001b[0mp_k\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_j\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m       \u001b[0mAgg_year\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mAgg_year\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mp_l\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_k\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNotADirectoryError\u001b[0m: [Errno 20] Not a directory: '/content/pulse/data/aggregated/transaction/country/india/state/mizoram/2022/1.json/'"
           ]
         }
       ]
